# fw-nrfconnect-nrf

./: west.yml
applications/press/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
applications/press/configuration/: potmeter_pin_config.h  tb6612fng_pin_config.h
applications/press/src/: main.c
applications/press/src/events/: CMakeLists.txt  Kconfig  hx711_ctrl_event.c  hx711_ctrl_event.h  hx711_data_event.c  hx711_data_event.h  module_state_event.c  potmeter_ctrl_event.c  potmeter_ctrl_event.h  potmeter_data_event.c  potmeter_data_event.h  tb6612fng_ctrl_event.c  tb6612fng_ctrl_event.h
applications/press/src/modules/: CMakeLists.txt  Kconfig  controller.c  display_handler.c  hx711_handler.c  potmeter_handler.c  tb6612fng_handler.c
doc/nrf/: links.txt
doc/nrf/releases/: release-notes-changelog.rst
drivers/: CMakeLists.txt  Kconfig
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.at45d  spi_flash_at45d.c
drivers/pmic/: CMakeLists.txt  Kconfig  npm6001.c
dts/bindings/mtd/: adesto,at45d.yaml
dts/bindings/pmic/: nordic,npm6001.yaml
include/dfu/: dfu_target.h
samples/nrf9160/http_modem_update/: CMakeLists.txt  Kconfig  nrf9160_pca10090ns.overlay  prj.conf
samples/nrf9160/http_modem_update/mfu/: CMakeLists.txt  Kconfig  mfu.c  mfu.h  mfu_state.h  mfu_state_ncs_settings.c  mfu_types.c  mfu_types.h  modem_dfu_rpc.c  modem_dfu_rpc.h  sec_ipc_api.h
samples/nrf9160/http_modem_update/src/: main.c
samples/nrf9160/skyhook_client/: CMakeLists.txt  Kconfig  prj.conf
samples/nrf9160/skyhook_client/embedded_client/: CMakeLists.txt  Kconfig
samples/nrf9160/skyhook_client/src/: main.c
samples/pmic/npm6001/: prj.conf
samples/pmic/npm6001/boards/: nrf5340dk_nrf5340_cpuapp.overlay
samples/pmic/npm6001/src/: main.c
subsys/dfu/: Kconfig
subsys/dfu/include/: dfu_target_flash.h
subsys/dfu/src/: dfu_target.c  dfu_target_flash.c
